--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
               <span id="hamburger"></span>
           </button>
           <ul id="menu">
-              <li><a href="/">Sobre</a></li>
-              <li><a href="/">Cursos</a></li>
-              <li><a href="/">Contato</a></li>
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Cursos</a></li>
+              <li><a href="#">Contato</a></li>
                             
           </ul>
       </nav>
